--- a/딥러닝/deeplearning.ipynb
+++ b/딥러닝/deeplearning.ipynb
@@ -70,8 +70,8 @@
     "            nn.Dropout(0.5)\n",
     "        )\n",
     "        self.fc3 = nn.Sequential(\n",
-    "            nn.Linear(4096, 1000),\n",
-    "            nn.Softmax(dim=1) # CrossEntropyLoss 사용 시 제거\n",
+    "            nn.Linear(4096, 1024),\n",
+    "            # nn.Softmax(dim=1) # CrossEntropyLoss 사용 시 제거\n",
     "        )\n",
     "        self.maxpool = nn.MaxPool2d(2, 2)\n",
     "        \n",
@@ -91,6 +91,39 @@
     "        x = self.fc3(x)\n",
     "        \n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QuestionEncoder(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim=300, hidden_dim=512, num_layers=2):\n",
+    "        super(QuestionEncoder, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.lstm = nn.LSTM(\n",
+    "            input_size=embedding_dim,\n",
+    "            hidden_size=hidden_dim,\n",
+    "            num_layers=num_layers,\n",
+    "            batch_first=True,\n",
+    "            bidirectional=True\n",
+    "        )\n",
+    "        self.fc = nn.Linear(hidden_dim * 2, 1024)  # 2*hidden_dim → 1024차원으로 축소\n",
+    "\n",
+    "    def forward(self, questions):  \n",
+    "        embedded = self.embedding(questions)  # [B, T, 300]\n",
+    "        lstm_out, _ = self.lstm(embedded)      # [B, T, 2*H]\n",
+    "\n",
+    "        # 방법 1: 마지막 시점의 양방향 LSTM 출력만 사용\n",
+    "        last_hidden = lstm_out[:, -1, :]       # [B, 2*H]\n",
+    "\n",
+    "        # 방법 2: 평균 pooling (optional)\n",
+    "        # last_hidden = torch.mean(lstm_out, dim=1)  # [B, 2*H]\n",
+    "\n",
+    "        out = self.fc(last_hidden)             # [B, 1024]\n",
+    "        return out\n"
    ]
   },
   {
