--- a/딥러닝/iris_computer_vision.ipynb
+++ b/딥러닝/iris_computer_vision.ipynb
@@ -40,32 +40,28 @@
     "        for filename in os.listdir(folder):\n",
     "            if filename.lower().endswith(('.png', '.jpg', '.jpeg', '.bmp')):\n",
     "                img_path = os.path.join(folder, filename)\n",
-    "                img = Image.open(img_path).convert('L')  # 'L'이면 1채널, RGB이면 convert('RGB')\n",
+    "                img = Image.open(img_path).convert('RGB')  # 'L'이면 1채널, RGB이면 convert('RGB')\n",
     "                img_np = np.array(img)\n",
     "                # (1, H, W) 모양으로 맞추기 위해 차원 추가 (1-channel 이미지)\n",
-    "                img_np = np.expand_dims(img_np, axis=0)\n",
+    "                # img_np = np.expand_dims(img_np, axis=0)\n",
     "                images.append(img_np)\n",
     "                labels.append(label_to_idx[label])\n",
     "    \n",
     "    images = np.array(images)  # shape: (N, 1, H, W)\n",
     "    labels = np.array(labels)\n",
-    "    return images, labels\n",
-    "\n",
-    "# 데이터 경로 지정\n",
-    "root_dir = \"datasets/iris\"\n",
-    "numpy_images, labels = load_images_from_folder(root_dir)"
+    "    return images, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "256\n",
+      "421\n",
       "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
       " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2\n",
       " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
@@ -95,16 +91,18 @@
     "class Custom_Dataset(Dataset):\n",
     "    def __init__(self, X, Y):\n",
     "        self.X = X  # 넘파이 배열 (N, 1, H, W)\n",
-    "        self.Y = Y  # 레이블\n",
+    "        self.Y = Y  # 레이블 (정수 인덱스)\n",
     "        self.transform = transforms.Compose([\n",
-    "            transforms.ToTensor(),  # 다시 PyTorch 텐서로 변환\n",
-    "            transforms.RandomRotation(degrees=2),  # ±2도 회전\n",
+    "            transforms.ToPILImage(),               # 넘파이 배열을 PIL 이미지로 변환 (PIL은 증강에 적합)\n",
+    "            transforms.Resize((224, 224)),           # 모델 입력 크기에 맞춤 (예: ResNet, VGG 등)\n",
+    "            transforms.RandomRotation(degrees=2),    # ±2도 회전\n",
     "            transforms.RandomAffine(degrees=0, translate=(0.02, 0.02)),  # 작은 이동\n",
-    "            transforms.ColorJitter(brightness=0.2, contrast=0.2),  # 밝기 및 대비 조절\n",
-    "            transforms.Normalize((0.5), (0.5)),\n",
-    "            transforms.RandomErasing(p=0.1, scale=(0.02, 0.05)),  # 일부 영역을 랜덤하게 지움\n",
-    "            transforms.Resize((224, 224)),  # ResNet 입력 크기에 맞춤\n",
-    "            # transforms.Normalize(mean=[0.5], std=[0.5])  # 데이터 정규화\n",
+    "            transforms.ColorJitter(brightness=0.2, contrast=0.2),          # 밝기 및 대비 조절\n",
+    "            transforms.ToTensor(),                   # 다시 PyTorch 텐서로 변환\n",
+    "            # transforms.Normalize((0.5,), (0.5,)),     # 데이터 정규화 (1채널이므로 튜플에 쉼표 필수)\n",
+    "            transforms.Normalize(mean=[0.485, 0.456, 0.406],       # RGB 정규화\n",
+    "                                 std=[0.229, 0.224, 0.225]),\n",
+    "            transforms.RandomErasing(p=0.1, scale=(0.02, 0.05)),\n",
     "        ])\n",
     "\n",
     "    def __len__(self):\n",
@@ -113,15 +111,14 @@
     "    def __getitem__(self, index):\n",
     "        x = self.X[index]  # x.shape: (1, H, W)\n",
     "        y = self.Y[index]\n",
-    "\n",
-    "        # 넘파이 배열을 (H, W)로 변환\n",
+    "        # ToPILImage expects shape (H, W) for a grayscale image\n",
     "        if x.shape[0] == 1:\n",
     "            x = x.squeeze(0)  # (1, H, W) → (H, W)\n",
-    "\n",
-    "        # 데이터 증강 적용\n",
-    "        x = self.transform(x) #(1, 46,658)\n",
-    "\n",
-    "        return x, y  # PyTorch Tensor 반환"
+    "        if x.shape[0] == 3:\n",
+    "            x = x.transpose(1, 2, 0)  # (3, H, W) → (H, W, 3)\n",
+    "        # 데이터 증강 및 전처리 적용\n",
+    "        x = self.transform(x)\n",
+    "        return x, y"
    ]
   },
   {
@@ -183,7 +180,7 @@
     "print(data.size())\n",
     "\n",
     "\n",
-    "plt.imshow(data[0].permute(1, 2, 0), cmap=\"gray\")"
+    "plt.imshow(data[0].permute(1, 2, 0)) #, cmap=\"gray\""
    ]
   },
   {
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +244,7 @@
       "/Users/aepeul/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
       "  warnings.warn(msg)\n",
       "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /Users/aepeul/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
-      " 15%|█▍        | 77.6M/528M [00:06<00:40, 11.7MB/s]\n"
+      " 12%|█▏        | 63.0M/528M [00:05<00:41, 11.7MB/s]\n"
      ]
     },
     {
@@ -257,7 +254,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m vgg \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvgg16\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpretrained\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m num_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      4\u001b[0m vgg\u001b[38;5;241m.\u001b[39mclassifier[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mLinear(vgg\u001b[38;5;241m.\u001b[39mclassifier[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39min_features, num_classes)\n",
+      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m vgg \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvgg16\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpretrained\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m num_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      4\u001b[0m vgg\u001b[38;5;241m.\u001b[39mclassifier[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mLinear(vgg\u001b[38;5;241m.\u001b[39mclassifier[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39min_features, num_classes)\n",
       "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:142\u001b[0m, in \u001b[0;36mkwonly_to_pos_or_kw.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    135\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[1;32m    136\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msequence_to_str(\u001b[38;5;28mtuple\u001b[39m(keyword_only_kwargs\u001b[38;5;241m.\u001b[39mkeys()),\u001b[38;5;250m \u001b[39mseparate_last\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mand \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m as positional \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    137\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter(s) is deprecated since 0.13 and may be removed in the future. Please use keyword parameter(s) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    138\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minstead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    139\u001b[0m     )\n\u001b[1;32m    140\u001b[0m     kwargs\u001b[38;5;241m.\u001b[39mupdate(keyword_only_kwargs)\n\u001b[0;32m--> 142\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/torchvision/models/_utils.py:228\u001b[0m, in \u001b[0;36mhandle_legacy_interface.<locals>.outer_wrapper.<locals>.inner_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m kwargs[pretrained_param]\n\u001b[1;32m    226\u001b[0m     kwargs[weights_param] \u001b[38;5;241m=\u001b[39m default_weights_arg\n\u001b[0;32m--> 228\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbuilder\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/torchvision/models/vgg.py:433\u001b[0m, in \u001b[0;36mvgg16\u001b[0;34m(weights, progress, **kwargs)\u001b[0m\n\u001b[1;32m    413\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"VGG-16 from `Very Deep Convolutional Networks for Large-Scale Image Recognition <https://arxiv.org/abs/1409.1556>`__.\u001b[39;00m\n\u001b[1;32m    414\u001b[0m \n\u001b[1;32m    415\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    429\u001b[0m \u001b[38;5;124;03m    :members:\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    431\u001b[0m weights \u001b[38;5;241m=\u001b[39m VGG16_Weights\u001b[38;5;241m.\u001b[39mverify(weights)\n\u001b[0;32m--> 433\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_vgg\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprogress\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
