--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -28,77 +28,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import heapq\n",
-    "from collections import deque\n",
-    "\n",
-    "class Graph:\n",
-    "    def __init__(self):\n",
-    "        self.graph = {}\n",
-    "        \n",
-    "        \n",
-    "    def add_vertex(self, vertex):\n",
-    "        if vertex not in self.graph:\n",
-    "            self.graph[vertex] = []\n",
-    "        \n",
-    "            \n",
-    "    def add_edge(self, start, end, weight=None, directed=False):\n",
-    "        if start not in self.graph:\n",
-    "            self.add_vertex(start)\n",
-    "        if end not in self.graph:\n",
-    "            self.add_vertex(end)\n",
-    "           \n",
-    "        self.graph[start].append([end, weight])\n",
-    "        if not directed:\n",
-    "            self.graph[end].append([start, weight])\n",
-    "            \n",
-    "    \n",
-    "    def display(self):\n",
-    "        for vertex in self.graph:\n",
-    "            print(f\"{vertex}: {self.graph[vertex]}\")\n",
-    "            \n",
-    "            \n",
-    "    def bfs(self, start):\n",
-    "        visit_order = []\n",
-    "        visited = set()\n",
-    "        have_to_visit = deque()\n",
-    "        have_to_visit.append(start)\n",
-    "        \n",
-    "        while have_to_visit:\n",
-    "            vertex = have_to_visit.popleft()\n",
-    "            if vertex not in visited:\n",
-    "                visit_order.append(vertex)\n",
-    "                visited.add(vertex)\n",
-    "            \n",
-    "            for node in sorted(self.graph.get(vertex, [])):\n",
-    "                neighbor = node[0]\n",
-    "                \n",
-    "                if neighbor not in visited:\n",
-    "                    have_to_visit.append(neighbor)\n",
-    "                    \n",
-    "        return visit_order\n",
-    "    \n",
-    "# backjoon\n",
-    "import sys\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "N, M = map(int, input().strip().split())\n",
-    "nodes = list(map(int, input().strip().split()))\n",
-    "graph = Graph()\n",
-    "\n",
-    "for node in nodes:\n",
-    "    a, b = node[0], node[1]\n",
-    "    graph.add_edge(a, b)\n",
-    "    \n",
-    "print(len(graph.bfs()))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -117,88 +46,83 @@
    "source": [
     "# backjoon\n",
     "import sys\n",
-    "sys.setrecursionlimit(10**6)\n",
+    "from collections import deque\n",
+    "# from collections import defaultdict\n",
+    "\n",
     "input = sys.stdin.readline\n",
-    "from collections import defaultdict\n",
     "\n",
-    "def count_connection(edges, n):\n",
-    "    graph = defaultdict(list)\n",
+    "m, n = map(int, input().split())\n",
     "\n",
-    "    for u, v in edges:\n",
-    "        graph[u].append(v)\n",
-    "        graph[v].append(u)\n",
+    "# N = int(input())\n",
+    "tomatoes = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "    visited = set()\n",
-    "    count = 0\n",
+    "have_to_visit = deque()\n",
+    "days = 0\n",
     "\n",
-    "    def dfs(v):\n",
-    "        visited.add(v)\n",
-    "        for neighbor in graph[v]:\n",
-    "            if neighbor not in visited:\n",
-    "                dfs(neighbor)\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
     "\n",
-    "    for node in range(1, n + 1):\n",
-    "        if node not in visited:\n",
-    "            dfs(node)\n",
-    "            count += 1\n",
     "\n",
-    "    return count\n",
+    "for x, row in enumerate(tomatoes):\n",
+    "    for y, num in enumerate(row):\n",
+    "        if num == 1:\n",
+    "            for i in range(4):\n",
+    "                nx = x + dx[i]\n",
+    "                ny = y + dy[i]\n",
     "\n",
-    "N, M = map(int, input().strip().split())\n",
-    "edges = [tuple(map(int, input().strip().split())) for _ in range(M)]\n",
+    "                if 0 <= nx < n and 0 <= ny < m:\n",
+    "                    if tomatoes[nx][ny] == 0:\n",
+    "                        have_to_visit.append((x, y, days))\n",
+    "                        break  # 하나라도 0이 있으면 추가하고 다음 좌표로 이동\n",
+    "\n",
+    "\n",
+    "while have_to_visit:\n",
+    "    x, y, days = have_to_visit.popleft()\n",
     "    \n",
-    "print(count_connection(edges, N)) "
+    "    for i in range(4):\n",
+    "        nx = x + dx[i]\n",
+    "        ny = y + dy[i]\n",
+    "        \n",
+    "        if 0 <= nx < n and 0 <= ny < m:\n",
+    "            if tomatoes[nx][ny] == 0:\n",
+    "                tomatoes[nx][ny] = 1\n",
+    "                have_to_visit.append((nx, ny, days + 1))\n",
+    "                \n",
+    "\n",
+    "def check_waste():\n",
+    "    for x, row in enumerate(tomatoes):\n",
+    "        for y, num in enumerate(row):\n",
+    "            if num == 0:\n",
+    "                return True\n",
+    "                \n",
+    "if check_waste():\n",
+    "    print(-1)\n",
+    "else:\n",
+    "    print(days)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "deque([(0, [1, 1], 8),\n",
+       "       (1, [1, 1], 8),\n",
+       "       (0, [1, 1], 8),\n",
+       "       (1, [1, 1], 8),\n",
+       "       (0, [1, 1], 8),\n",
+       "       (1, [1, 1], 8)])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from collections import defaultdict, deque\n",
-    "\n",
-    "def count_connection(edges):\n",
-    "    graph = defaultdict(list)\n",
-    "    nodes = set()\n",
-    "    \n",
-    "    for u,v in edges:\n",
-    "        graph[u].append(v)\n",
-    "        graph[v].append(u)\n",
-    "        nodes.add(u)\n",
-    "        nodes.add(v)\n",
-    "    \n",
-    "    visited = set()\n",
-    "    count = 0\n",
-    "    \n",
-    "    def dfs(v):\n",
-    "        visited.add(v)\n",
-    "        for neighbor in graph[v]:\n",
-    "            if neighbor not in visited:\n",
-    "                dfs(neighbor)\n",
-    "                \n",
-    "    for node in nodes:\n",
-    "        if node not in visited:\n",
-    "            dfs(node)\n",
-    "            count += 1\n",
-    "\n",
-    "    return count\n",
-    "\n",
-    "\n",
-    "edges = [[1, 2], [2, 5], [5, 1], [3, 4], [4, 6]]\n",
-    "count_connection(edges)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
