--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -28,18 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "dfs() missing 1 required positional argument: 'graph'",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 37\u001b[0m\n\u001b[1;32m     34\u001b[0m     graph[a]\u001b[38;5;241m.\u001b[39mappend(b)\n\u001b[1;32m     35\u001b[0m     graph[b]\u001b[38;5;241m.\u001b[39mappend(a)  \u001b[38;5;66;03m# 양방향 그래프일 경우\u001b[39;00m\n\u001b[0;32m---> 37\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mdfs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgraph\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: dfs() missing 1 required positional argument: 'graph'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[104], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m permutations\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline\n\u001b[0;32m----> 9\u001b[0m n, m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# N = int(input())\u001b[39;00m\n\u001b[1;32m     12\u001b[0m nums \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m()\u001b[38;5;241m.\u001b[39msplit())) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n)]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -47,79 +47,108 @@
     "# backjoon\n",
     "import sys\n",
     "from collections import deque\n",
-    "# from collections import defaultdict\n",
+    "from collections import defaultdict\n",
+    "# from itertools import permutations, combinations\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "m, n = map(int, input().split())\n",
+    "# n, m = map(int, input().split())\n",
     "\n",
-    "# N = int(input())\n",
-    "tomatoes = [list(map(int, input().split())) for _ in range(n)]\n",
+    "n = int(input())\n",
+    "# nums = list(map(int, input().split()))\n",
+    "edges = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "def add_edge(start, end):\n",
+    "    graph[start].append(end)\n",
+    "    graph[end].append(start)\n",
+    "\n",
+    "graph = defaultdict(list)\n",
+    "visited_graph = defaultdict(int)\n",
+    "visited_graph[1] = 0\n",
+    "\n",
+    "for edge in edges:\n",
+    "    add_edge(edge[0], edge[1])\n",
+    "    \n",
+    "visited = set()\n",
     "\n",
     "have_to_visit = deque()\n",
-    "days = 0\n",
-    "\n",
-    "dx = [-1, 1, 0, 0]\n",
-    "dy = [0, 0, -1, 1]\n",
-    "\n",
-    "\n",
-    "for x, row in enumerate(tomatoes):\n",
-    "    for y, num in enumerate(row):\n",
-    "        if num == 1:\n",
-    "            for i in range(4):\n",
-    "                nx = x + dx[i]\n",
-    "                ny = y + dy[i]\n",
-    "\n",
-    "                if 0 <= nx < n and 0 <= ny < m:\n",
-    "                    if tomatoes[nx][ny] == 0:\n",
-    "                        have_to_visit.append((x, y, days))\n",
-    "                        break  # 하나라도 0이 있으면 추가하고 다음 좌표로 이동\n",
-    "\n",
+    "have_to_visit.append((1, 0))\n",
     "\n",
     "while have_to_visit:\n",
-    "    x, y, days = have_to_visit.popleft()\n",
+    "    node, parent = have_to_visit.popleft()\n",
     "    \n",
-    "    for i in range(4):\n",
-    "        nx = x + dx[i]\n",
-    "        ny = y + dy[i]\n",
-    "        \n",
-    "        if 0 <= nx < n and 0 <= ny < m:\n",
-    "            if tomatoes[nx][ny] == 0:\n",
-    "                tomatoes[nx][ny] = 1\n",
-    "                have_to_visit.append((nx, ny, days + 1))\n",
-    "                \n",
-    "\n",
-    "def check_waste():\n",
-    "    for x, row in enumerate(tomatoes):\n",
-    "        for y, num in enumerate(row):\n",
-    "            if num == 0:\n",
-    "                return True\n",
-    "                \n",
-    "if check_waste():\n",
-    "    print(-1)\n",
-    "else:\n",
-    "    print(days)"
+    "    visited.add(node)\n",
+    "    visited_graph[node] = parent\n",
+    "    \n",
+    "    for child in graph[node]:\n",
+    "        if child not in visited:\n",
+    "            have_to_visit.appendleft((child, node))\n",
+    "            \n",
+    "for key in sorted(visited_graph.keys()):\n",
+    "    if key != 1:\n",
+    "        print(visited_graph[key])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def moduler_exponentitaion(a, b, c):\n",
+    "    if b == 0:\n",
+    "        return 1\n",
+    "    elif b % 2 == 0:\n",
+    "        temp = moduler_exponentitaion(a, b // 2, c)\n",
+    "        return temp\n",
+    "    else:\n",
+    "        return (a * moduler_exponentitaion(a, b-1, c)) % c\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "deque([(0, [1, 1], 8),\n",
-       "       (1, [1, 1], 8),\n",
-       "       (0, [1, 1], 8),\n",
-       "       (1, [1, 1], 8),\n",
-       "       (0, [1, 1], 8),\n",
-       "       (1, [1, 1], 8)])"
+       "8"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pow(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mod' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[189], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmod\u001b[49m(\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mod' is not defined"
+     ]
     }
    ],
    "source": []
