--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -56,102 +56,74 @@
     "\n",
     "n = int(input())\n",
     "# nums = list(map(int, input().split()))\n",
-    "edges = [list(map(int, input().split())) for _ in range(n)]\n",
+    "sticker = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "def add_edge(start, end):\n",
-    "    graph[start].append(end)\n",
-    "    graph[end].append(start)\n",
+    "length = len(sticker[0])\n",
+    "dp = [[0] * length for _ in range(2)]\n",
     "\n",
-    "graph = defaultdict(list)\n",
-    "visited_graph = defaultdict(int)\n",
-    "visited_graph[1] = 0\n",
+    "dp[0][0] = sticker[0][0]\n",
+    "dp[1][0] = sticker[1][0]\n",
     "\n",
-    "for edge in edges:\n",
-    "    add_edge(edge[0], edge[1])\n",
-    "    \n",
-    "visited = set()\n",
     "\n",
-    "have_to_visit = deque()\n",
-    "have_to_visit.append((1, 0))\n",
+    "if length > 1:\n",
+    "    dp[0][1] = dp[1][0] + sticker[0][1]\n",
+    "    dp[1][1] = dp[0][0] + sticker[1][1]\n",
     "\n",
-    "while have_to_visit:\n",
-    "    node, parent = have_to_visit.popleft()\n",
-    "    \n",
-    "    visited.add(node)\n",
-    "    visited_graph[node] = parent\n",
-    "    \n",
-    "    for child in graph[node]:\n",
-    "        if child not in visited:\n",
-    "            have_to_visit.appendleft((child, node))\n",
-    "            \n",
-    "for key in sorted(visited_graph.keys()):\n",
-    "    if key != 1:\n",
-    "        print(visited_graph[key])"
+    "# 점화식\n",
+    "for i in range(2, length):\n",
+    "    dp[0][i] = max(dp[1][i-1], dp[1][i-2]) + sticker[0][i]\n",
+    "    dp[1][i] = max(dp[0][i-1], dp[0][i-2]) + sticker[1][i]\n",
+    "\n",
+    "print(max(dp[0][-1], dp[1][-1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "96\n"
+      "[[1, 3, 6, 10], [12, 19, 32, 53], [56, 91, 147, 238], [242, 394, 638, 1030]]\n"
      ]
     }
    ],
    "source": [
-    "def moduler_exponentitaion(a, b, c):\n",
-    "    if b == 0:\n",
-    "        return 1\n",
-    "    elif b % 2 == 0:\n",
-    "        temp = moduler_exponentitaion(a, b // 2, c)\n",
-    "        return temp\n",
-    "    else:\n",
-    "        return (a * moduler_exponentitaion(a, b-1, c)) % c\n",
-    "    \n"
+    "n, m = 4, 3\n",
+    "table = [\n",
+    "    [1, 2, 3, 4],\n",
+    "    [2, 3, 4, 5],\n",
+    "    [3, 4, 5, 6],\n",
+    "    [4, 5, 6, 7]\n",
+    "]\n",
+    "coords = [\n",
+    "    [2, 2, 3, 4],\n",
+    "    [3, 4, 3, 4],\n",
+    "    [1, 1, 4, 4]\n",
+    "]\n",
+    "\n",
+    "dp = [[0 for _ in range(n)] for _ in range(n)]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if j == 0:\n",
+    "            if i > 0:\n",
+    "                dp[i][j] = table[i][j] + dp[i-1][j-1]\n",
+    "            else:\n",
+    "                dp[i][j] = table[i][j] + dp[i-1][j]\n",
+    "        else:\n",
+    "            dp[i][j] = table[i][j] + dp[i][j-1] + dp[i-1][j] + dp[i-1][j-1]\n",
+    "            \n",
+    "print(dp)\n",
+    "                \n",
+    "# for coord in coords:\n",
+    "#     x1, y1, x2, y2 = coord[0]-1, coord[1]-1, coord[2]-1, coord[3]-1\n",
+    "#     if x1 == x2\n",
+    "    \n",
+    "#     print(dp[x2][y2] - dp[x1][y1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pow(2, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mod' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[189], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmod\u001b[49m(\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mod' is not defined"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
