--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[104], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m permutations\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline\n\u001b[0;32m----> 9\u001b[0m n, m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# N = int(input())\u001b[39;00m\n\u001b[1;32m     12\u001b[0m nums \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m()\u001b[38;5;241m.\u001b[39msplit())) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n)]\n",
+      "Cell \u001b[0;32mIn[56], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# from itertools import permutations, combinations\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline\n\u001b[0;32m----> 9\u001b[0m a, b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# n = int(input())\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# nums = list(map(int, input().split()))\u001b[39;00m\n\u001b[1;32m     13\u001b[0m table \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m()\u001b[38;5;241m.\u001b[39msplit())) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n)]\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -52,77 +52,68 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# n, m = map(int, input().split())\n",
+    "a, b = map(str, input().split())\n",
     "\n",
-    "n = int(input())\n",
+    "# n = int(input())\n",
     "# nums = list(map(int, input().split()))\n",
-    "sticker = [list(map(int, input().split())) for _ in range(n)]\n",
+    "table = [list(map(int, input().split())) for _ in range(n)]\n",
+    "coords = [list(map(int, input().split())) for _ in range(m)]\n",
     "\n",
-    "length = len(sticker[0])\n",
-    "dp = [[0] * length for _ in range(2)]\n",
+    "dp = [[0 for _ in range(len(b) + 1)] for _ in range(len(a) + 1)]\n",
     "\n",
-    "dp[0][0] = sticker[0][0]\n",
-    "dp[1][0] = sticker[1][0]\n",
+    "for i in range(1, len(a) + 1):\n",
+    "    for j in range(1, len(b) + 1):\n",
+    "        if a[i-1] == b[j-1]:\n",
+    "            dp[i][j] = dp[i-1][j-1] + 1\n",
+    "        else:\n",
+    "            dp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
     "\n",
-    "\n",
-    "if length > 1:\n",
-    "    dp[0][1] = dp[1][0] + sticker[0][1]\n",
-    "    dp[1][1] = dp[0][0] + sticker[1][1]\n",
-    "\n",
-    "# 점화식\n",
-    "for i in range(2, length):\n",
-    "    dp[0][i] = max(dp[1][i-1], dp[1][i-2]) + sticker[0][i]\n",
-    "    dp[1][i] = max(dp[0][i-1], dp[0][i-2]) + sticker[1][i]\n",
-    "\n",
-    "print(max(dp[0][-1], dp[1][-1]))"
+    "print(max(dp))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 3, 6, 10], [12, 19, 32, 53], [56, 91, 147, 238], [242, 394, 638, 1030]]\n"
+      "[0, 1, 2, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
-    "n, m = 4, 3\n",
-    "table = [\n",
-    "    [1, 2, 3, 4],\n",
-    "    [2, 3, 4, 5],\n",
-    "    [3, 4, 5, 6],\n",
-    "    [4, 5, 6, 7]\n",
-    "]\n",
-    "coords = [\n",
-    "    [2, 2, 3, 4],\n",
-    "    [3, 4, 3, 4],\n",
-    "    [1, 1, 4, 4]\n",
-    "]\n",
+    "a = \"ABCDEF\"\n",
+    "b = \"ACCDE\"\n",
     "\n",
-    "dp = [[0 for _ in range(n)] for _ in range(n)]\n",
+    "dp = [[0 for _ in range(len(b) + 1)] for _ in range(len(a) + 1)]\n",
     "\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        if j == 0:\n",
-    "            if i > 0:\n",
-    "                dp[i][j] = table[i][j] + dp[i-1][j-1]\n",
-    "            else:\n",
-    "                dp[i][j] = table[i][j] + dp[i-1][j]\n",
+    "for i in range(1, len(a) + 1):\n",
+    "    for j in range(1, len(b) + 1):\n",
+    "        if a[i-1] == b[j-1]:\n",
+    "            dp[i][j] = dp[i-1][j-1] + 1\n",
     "        else:\n",
-    "            dp[i][j] = table[i][j] + dp[i][j-1] + dp[i-1][j] + dp[i-1][j-1]\n",
+    "            dp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
     "            \n",
-    "print(dp)\n",
-    "                \n",
-    "# for coord in coords:\n",
-    "#     x1, y1, x2, y2 = coord[0]-1, coord[1]-1, coord[2]-1, coord[3]-1\n",
-    "#     if x1 == x2\n",
-    "    \n",
-    "#     print(dp[x2][y2] - dp[x1][y1])"
+    "print(max(dp))\n",
+    "\n",
+    "# i = len(a)\n",
+    "# j = len(b)\n",
+    "# answer = \"\"\n",
+    "\n",
+    "# while i > 0 and j > 0:\n",
+    "#     if dp[i-1][j] == dp[i][j-1]:\n",
+    "#         answer = a[i-1] + answer\n",
+    "#         i -= 1\n",
+    "#         j -= 1\n",
+    "#     elif dp[i-1][j] > dp[i][j-1]:\n",
+    "#         i -= 1  # 위쪽으로 이동\n",
+    "#     else:\n",
+    "#         j -= 1  # 왼쪽으로 이동\n",
+    "        \n",
+    "# print(answer)"
    ]
   },
   {
