--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -52,68 +52,76 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "a, b = map(str, input().split())\n",
+    "n, k = map(int, input().split())\n",
     "\n",
     "# n = int(input())\n",
     "# nums = list(map(int, input().split()))\n",
-    "table = [list(map(int, input().split())) for _ in range(n)]\n",
-    "coords = [list(map(int, input().split())) for _ in range(m)]\n",
+    "stuffs = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "dp = [[0 for _ in range(len(b) + 1)] for _ in range(len(a) + 1)]\n",
+    "dp = [[0 for _ in range(k + 1)] for _ in range(n + 1)]\n",
     "\n",
-    "for i in range(1, len(a) + 1):\n",
-    "    for j in range(1, len(b) + 1):\n",
-    "        if a[i-1] == b[j-1]:\n",
-    "            dp[i][j] = dp[i-1][j-1] + 1\n",
+    "for i in range(1, n + 1):\n",
+    "    weight = stuffs[i-1][0]\n",
+    "    value = stuffs[i-1][1]\n",
+    "    \n",
+    "    for j in range(k + 1):\n",
+    "        if j < weight:\n",
+    "            dp[i][j] = dp[i - 1][j]\n",
     "        else:\n",
-    "            dp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
+    "            dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - weight] + value)\n",
     "\n",
-    "print(max(dp))"
+    "print(dp[n][k])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 2, 3, 4]\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[101], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m deque\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline\n\u001b[0;32m----> 7\u001b[0m N, K \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m      9\u001b[0m MAX \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100001\u001b[39m\n\u001b[1;32m     10\u001b[0m visited \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m MAX\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "a = \"ABCDEF\"\n",
-    "b = \"ACCDE\"\n",
+    "# backjoon\n",
+    "import sys\n",
+    "from collections import deque\n",
     "\n",
-    "dp = [[0 for _ in range(len(b) + 1)] for _ in range(len(a) + 1)]\n",
+    "input = sys.stdin.readline\n",
     "\n",
-    "for i in range(1, len(a) + 1):\n",
-    "    for j in range(1, len(b) + 1):\n",
-    "        if a[i-1] == b[j-1]:\n",
-    "            dp[i][j] = dp[i-1][j-1] + 1\n",
-    "        else:\n",
-    "            dp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
-    "            \n",
-    "print(max(dp))\n",
+    "N, K = map(int, input().split())\n",
     "\n",
-    "# i = len(a)\n",
-    "# j = len(b)\n",
-    "# answer = \"\"\n",
+    "MAX = 100001\n",
+    "visited = [0] * MAX\n",
+    "count = [0] * MAX\n",
     "\n",
-    "# while i > 0 and j > 0:\n",
-    "#     if dp[i-1][j] == dp[i][j-1]:\n",
-    "#         answer = a[i-1] + answer\n",
-    "#         i -= 1\n",
-    "#         j -= 1\n",
-    "#     elif dp[i-1][j] > dp[i][j-1]:\n",
-    "#         i -= 1  # 위쪽으로 이동\n",
-    "#     else:\n",
-    "#         j -= 1  # 왼쪽으로 이동\n",
-    "        \n",
-    "# print(answer)"
+    "have_to_visit = deque()\n",
+    "have_to_visit.append(N)\n",
+    "visited[N] = 1\n",
+    "count[N] = 1\n",
+    "\n",
+    "while have_to_visit:\n",
+    "    current = have_to_visit.popleft()\n",
+    "\n",
+    "    for next_pos in (current - 1, current + 1, current * 2):\n",
+    "        if 0 <= next_pos < MAX:\n",
+    "            if visited[next_pos] == 0:\n",
+    "                visited[next_pos] = visited[current] + 1\n",
+    "                count[next_pos] = count[current]\n",
+    "                have_to_visit.append(next_pos)\n",
+    "            elif visited[next_pos] == visited[current] + 1:\n",
+    "                count[next_pos] += count[current]\n",
+    "                \n",
+    "print(visited[K]-1)\n",
+    "print(count[K])"
    ]
   },
   {
