--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -52,76 +52,62 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n, k = map(int, input().split())\n",
+    "n, m = map(int, input().split())\n",
     "\n",
     "# n = int(input())\n",
-    "# nums = list(map(int, input().split()))\n",
-    "stuffs = [list(map(int, input().split())) for _ in range(n)]\n",
+    "# steps = list(map(int, input().split()))\n",
+    "# stuffs = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "dp = [[0 for _ in range(k + 1)] for _ in range(n + 1)]\n",
+    "dict1  = defaultdict(str)\n",
+    "dict2 = defaultdict(int)\n",
     "\n",
-    "for i in range(1, n + 1):\n",
-    "    weight = stuffs[i-1][0]\n",
-    "    value = stuffs[i-1][1]\n",
-    "    \n",
-    "    for j in range(k + 1):\n",
-    "        if j < weight:\n",
-    "            dp[i][j] = dp[i - 1][j]\n",
-    "        else:\n",
-    "            dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - weight] + value)\n",
+    "for i in range(1, n+1):\n",
+    "    pokemon = input().strip()\n",
+    "    dict1[i] = pokemon\n",
+    "    dict2[pokemon] = i\n",
     "\n",
-    "print(dp[n][k])"
+    "for _ in range(m):\n",
+    "    query = input().strip()\n",
+    "    if query.isdigit():\n",
+    "        print(dict1[query])\n",
+    "    else:\n",
+    "        print(dict2[query])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[101], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m deque\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline\n\u001b[0;32m----> 7\u001b[0m N, K \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m      9\u001b[0m MAX \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100001\u001b[39m\n\u001b[1;32m     10\u001b[0m visited \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m MAX\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'Bulbasaur': 1, 'Ivysaur': 2, 'Venusaur': 3, 'Charmander': 4, 'Charmeleon': 5, 'Charizard': 6, 'Squirtle': 7, 'Wartortle': 8, 'Blastoise': 9, 'Caterpie': 10, 'Metapod': 11, 'Butterfree': 12, 'Weedle': 13, 'Kakuna': 14, 'Beedrill': 15, 'Pidgey': 16, 'Pidgeotto': 17, 'Pidgeot': 18, 'Rattata': 19, 'Raticate': 20, 'Spearow': 21, 'Fearow': 22, 'Ekans': 23, 'Arbok': 24, 'Pikachu': 25, 'Raichu': 26})\n"
      ]
     }
    ],
    "source": [
-    "# backjoon\n",
-    "import sys\n",
-    "from collections import deque\n",
     "\n",
-    "input = sys.stdin.readline\n",
+    "from collections import defaultdict\n",
+    "dict1  = defaultdict(str)\n",
+    "dict2 = defaultdict(int)\n",
     "\n",
-    "N, K = map(int, input().split())\n",
+    "pokemons = \n",
     "\n",
-    "MAX = 100001\n",
-    "visited = [0] * MAX\n",
-    "count = [0] * MAX\n",
+    "for i in range(1, n+1):\n",
+    "    dict1[i] = pokemons[i-1]\n",
+    "    dict2[pokemons[i-1]] = i\n",
+    "    \n",
+    "print(dict2)\n",
     "\n",
-    "have_to_visit = deque()\n",
-    "have_to_visit.append(N)\n",
-    "visited[N] = 1\n",
-    "count[N] = 1\n",
+    "queries = \n",
     "\n",
-    "while have_to_visit:\n",
-    "    current = have_to_visit.popleft()\n",
-    "\n",
-    "    for next_pos in (current - 1, current + 1, current * 2):\n",
-    "        if 0 <= next_pos < MAX:\n",
-    "            if visited[next_pos] == 0:\n",
-    "                visited[next_pos] = visited[current] + 1\n",
-    "                count[next_pos] = count[current]\n",
-    "                have_to_visit.append(next_pos)\n",
-    "            elif visited[next_pos] == visited[current] + 1:\n",
-    "                count[next_pos] += count[current]\n",
-    "                \n",
-    "print(visited[K]-1)\n",
-    "print(count[K])"
+    "for query in queries:\n",
+    "    if isinstance(query, int):\n",
+    "        print(dict1[query])\n",
+    "    else:\n",
+    "        print(dict2[query])"
    ]
   },
   {
