--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -76,38 +76,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {'Bulbasaur': 1, 'Ivysaur': 2, 'Venusaur': 3, 'Charmander': 4, 'Charmeleon': 5, 'Charizard': 6, 'Squirtle': 7, 'Wartortle': 8, 'Blastoise': 9, 'Caterpie': 10, 'Metapod': 11, 'Butterfree': 12, 'Weedle': 13, 'Kakuna': 14, 'Beedrill': 15, 'Pidgey': 16, 'Pidgeotto': 17, 'Pidgeot': 18, 'Rattata': 19, 'Raticate': 20, 'Spearow': 21, 'Fearow': 22, 'Ekans': 23, 'Arbok': 24, 'Pikachu': 25, 'Raichu': 26})\n"
+      "5598\n"
      ]
     }
    ],
    "source": [
+    "n, k = 10, 4200\n",
     "\n",
-    "from collections import defaultdict\n",
-    "dict1  = defaultdict(str)\n",
-    "dict2 = defaultdict(int)\n",
+    "coins = [1, 5, 10, 50, 100,500,1000, 5000, 10000, 50000]\n",
+    "coins = sorted(coins, reverse=True)\n",
     "\n",
-    "pokemons = \n",
+    "result = 0\n",
     "\n",
-    "for i in range(1, n+1):\n",
-    "    dict1[i] = pokemons[i-1]\n",
-    "    dict2[pokemons[i-1]] = i\n",
+    "for i in range(n):\n",
+    "    coin = coins[i]\n",
     "    \n",
-    "print(dict2)\n",
-    "\n",
-    "queries = \n",
-    "\n",
-    "for query in queries:\n",
-    "    if isinstance(query, int):\n",
-    "        print(dict1[query])\n",
-    "    else:\n",
-    "        print(dict2[query])"
+    "    if k > coin:\n",
+    "        share = k // coin\n",
+    "        remainder = k % coin\n",
+    "        result += share\n",
+    "        \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4200 // 1000"
    ]
   },
   {
