--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -52,78 +52,88 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n, m = map(int, input().split())\n",
+    "# n, m = map(int, input().split())\n",
     "\n",
-    "# n = int(input())\n",
+    "t = int(input())\n",
     "# steps = list(map(int, input().split()))\n",
     "# stuffs = [list(map(int, input().split())) for _ in range(n)]\n",
+    "nums=[]\n",
+    "for i in range(t):\n",
+    "    nums.append(input().strip())\n",
+    "    \n",
     "\n",
-    "dict1  = defaultdict(str)\n",
-    "dict2 = defaultdict(int)\n",
+    "dp = [0] * 101\n",
+    "dp[1] = 1\n",
+    "dp[2] = 1\n",
+    "dp[3] = 1\n",
+    "dp[4] = 2\n",
+    "dp[5] = 2\n",
+    "dp[6] = 3\n",
+    "dp[7] = 4\n",
     "\n",
-    "for i in range(1, n+1):\n",
-    "    pokemon = input().strip()\n",
-    "    dict1[i] = pokemon\n",
-    "    dict2[pokemon] = i\n",
+    "for i in range(8, 100 + 1):\n",
+    "    dp[i] = dp[i-1] + dp[i-5]\n",
     "\n",
-    "for _ in range(m):\n",
-    "    query = input().strip()\n",
-    "    if query.isdigit():\n",
-    "        print(dict1[query])\n",
-    "    else:\n",
-    "        print(dict2[query])"
+    "for i in nums:\n",
+    "    print(dp[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5598\n"
+      "100\n"
      ]
     }
    ],
    "source": [
-    "n, k = 10, 4200\n",
+    "# backjoon\n",
+    "import sys\n",
     "\n",
-    "coins = [1, 5, 10, 50, 100,500,1000, 5000, 10000, 50000]\n",
-    "coins = sorted(coins, reverse=True)\n",
+    "input = sys.stdin.readline\n",
+    "expressions = \"input().strip()\".split(\"-\")\n",
     "\n",
-    "result = 0\n",
+    "for i in range(len(expressions)):\n",
+    "    expression = expressions[i]\n",
+    "    if \"+\" in expression:\n",
+    "        nums = map(int, expression.split(\"+\"))\n",
+    "        num = sum(nums)\n",
+    "        expressions[i] = num\n",
+    "    else:\n",
+    "        num = int(expression)\n",
+    "        expressions[i] = num\n",
     "\n",
-    "for i in range(n):\n",
-    "    coin = coins[i]\n",
-    "    \n",
-    "    if k > coin:\n",
-    "        share = k // coin\n",
-    "        remainder = k % coin\n",
-    "        result += share\n",
-    "        \n",
+    "result = expressions[0]\n",
+    "for num in expressions[1:]:\n",
+    "    result -= num\n",
+    "\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "9"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "4200 // 1000"
+    "a = \"00009\"\n",
+    "int(a)"
    ]
   },
   {
