--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "-1\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
     "import sys\n",
     "\n",
     "input = sys.stdin.readline\n",
-    "expressions = \"input().strip()\".split(\"-\")\n",
+    "expressions = input().strip().split(\"-\")\n",
     "\n",
     "for i in range(len(expressions)):\n",
     "    expression = expressions[i]\n",
