--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -61,79 +61,49 @@
     "for i in range(t):\n",
     "    nums.append(input().strip())\n",
     "    \n",
-    "\n",
-    "dp = [0] * 101\n",
-    "dp[1] = 1\n",
-    "dp[2] = 1\n",
-    "dp[3] = 1\n",
-    "dp[4] = 2\n",
-    "dp[5] = 2\n",
-    "dp[6] = 3\n",
-    "dp[7] = 4\n",
-    "\n",
-    "for i in range(8, 100 + 1):\n",
-    "    dp[i] = dp[i-1] + dp[i-5]\n",
-    "\n",
-    "for i in nums:\n",
-    "    print(dp[i])"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "# backjoon\n",
     "import sys\n",
     "\n",
     "input = sys.stdin.readline\n",
-    "expressions = input().strip().split(\"-\")\n",
     "\n",
-    "for i in range(len(expressions)):\n",
-    "    expression = expressions[i]\n",
-    "    if \"+\" in expression:\n",
-    "        nums = map(int, expression.split(\"+\"))\n",
-    "        num = sum(nums)\n",
-    "        expressions[i] = num\n",
+    "n = int(input())\n",
+    "m = int(input())\n",
+    "loc = 0\n",
+    "answer = 0\n",
+    "count = 0\n",
+    "\n",
+    "s = input().strip()\n",
+    "\n",
+    "compare = \"IOI\" \n",
+    "\n",
+    "i = 0\n",
+    "while i < m - 1:\n",
+    "    if s[i:i+3] == compare:\n",
+    "        count += 1\n",
+    "        i += 2\n",
+    "        if count == n:\n",
+    "            count -=1\n",
+    "            answer += 1\n",
     "    else:\n",
-    "        num = int(expression)\n",
-    "        expressions[i] = num\n",
+    "        i += 1\n",
     "\n",
-    "result = expressions[0]\n",
-    "for num in expressions[1:]:\n",
-    "    result -= num\n",
-    "\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = \"00009\"\n",
-    "int(a)"
+    "print(answer)"
    ]
   },
   {
