--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,10 +66,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1\n",
+      "1 1 1\n",
+      "1 1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "queue = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    age, name = input().split()\n",
+    "    age = int(age)\n",
+    "    \n",
+    "    heapq.heappush(queue, (age, i, name))\n",
+    "    \n",
+    "while queue:\n",
+    "    age, _, name = heapq.heappop(queue)\n",
+    "    print(age, name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dfs_path_exist(adj_matrix):\n",
+    "    n = len(adj_matrix)\n",
+    "    reach = [[0] * n for _ in range(n)]\n",
+    "\n",
+    "    def dfs(start, node, visited):\n",
+    "        for neighbor in range(n):\n",
+    "            if adj_matrix[node][neighbor] and not visited[neighbor]:\n",
+    "                visited[neighbor] = True\n",
+    "                reach[start][neighbor] = 1\n",
+    "                dfs(start, neighbor, visited)\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        visited = [False] * n\n",
+    "        dfs(i, i, visited)\n",
+    "\n",
+    "    return reach\n",
+    "\n",
+    "# 예제\n",
+    "adj_matrix = [\n",
+    "    [0, 1, 0, 0],\n",
+    "    [0, 0, 1, 0],\n",
+    "    [0, 0, 0, 1],\n",
+    "    [0, 0, 0, 0]\n",
+    "]\n",
+    "\n",
+    "result = dfs_path_exist(adj_matrix)\n",
+    "for row in result:\n",
+    "    print(*row)\n"
+   ]
   }
  ],
  "metadata": {
