--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -81,29 +81,75 @@
    ],
    "source": [
     "import sys\n",
-    "import heapq\n",
+    "from collections import deque\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "n = int(input())\n",
-    "queue = []\n",
+    "rgbs = [list(input().strip()) for _ in range(n)]\n",
     "\n",
-    "for i in range(n):\n",
-    "    age, name = input().split()\n",
-    "    age = int(age)\n",
+    "area1 = 0\n",
+    "area2 = 0\n",
+    "\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "def bfs(i, j, color, visited):\n",
+    "    have_to_visit = deque()\n",
+    "    have_to_visit.append((i, j))\n",
+    "    visited[i][j] = True\n",
     "    \n",
-    "    heapq.heappush(queue, (age, i, name))\n",
+    "    while have_to_visit:\n",
+    "        x, y = have_to_visit.popleft()\n",
+    "        \n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if 0 <= nx < n and 0 <= ny < n:\n",
+    "                if rgbs[nx][ny] in color and not visited[nx][ny]:\n",
+    "                    visited[nx][ny] = True\n",
+    "                    have_to_visit.append((nx, ny))\n",
+    "\n",
+    "for color in ['R', 'G', 'B']:\n",
+    "    visited = [[False]*n for _ in range(n)]\n",
+    "    have_to_visit = deque()\n",
     "    \n",
-    "while queue:\n",
-    "    age, _, name = heapq.heappop(queue)\n",
-    "    print(age, name)\n"
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if rgbs[i][j] in color and not visited[i][j]:\n",
+    "                bfs(i, j, color, visited)\n",
+    "                area1 += 1\n",
+    "\n",
+    "for color in [['R', 'G'], 'B']:\n",
+    "    visited = [[False]*n for _ in range(n)]\n",
+    "    have_to_visit = deque()\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if rgbs[i][j] in color and not visited[i][j]:\n",
+    "                bfs(i, j, color, visited)\n",
+    "                area2 += 1\n",
+    "\n",
+    "print(area1, area2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dfs_path_exist(adj_matrix):\n",
     "    n = len(adj_matrix)\n",
@@ -134,6 +180,35 @@
     "for row in result:\n",
     "    print(*row)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "a = [1, 2, 3]\n",
+    "a[-2] + a[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
