--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -136,6 +136,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "from collections import deque, defaultdict\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "t = int(input())\n",
+    "\n",
+    "for i in range(t):\n",
+    "    k = int(input())\n",
+    "    \n",
+    "    max_heap = []\n",
+    "    min_heap = []\n",
+    "    visited = defaultdict(bool)\n",
+    "    \n",
+    "    for index in range(k):\n",
+    "        operator, num = map(int, input().split())\n",
+    "        num = int(num)\n",
+    "\n",
+    "        if operator == \"D\":\n",
+    "            if num == 1:\n",
+    "                if len() == 0:\n",
+    "                    continue\n",
+    "                heapq.heappop(max_heap)\n",
+    "            else:\n",
+    "                if len() == 0:\n",
+    "                    continue\n",
+    "                heapq.heappop(min_heap)\n",
+    "        elif operator == \"I\":\n",
+    "            heapq.heappush(max_heap, -num)\n",
+    "            heapq.heappush(min_heap, num)\n",
+    "            visited[index] = True\n",
+    "            \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "heap = []\n",
+    "values = [1,5,3,2,4]\n",
+    "\n",
+    "# 아래 for문을 실행시키고 나면 heap은 [-5,-4,-3,-1,-2]가 된다.\n",
+    "for value in values:\n",
+    "\theapq.heappush(heap, -value)\n",
+    "\n",
+    "# 아래 for문을 실행시키면 5,4,3,2,1이 출력된다. 즉, 큰 숫자부터 출력이 된다.\n",
+    "for i in range(5):\n",
+    "\tprint(-heapq.heappop(heap))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -179,28 +261,6 @@
     "result = dfs_path_exist(adj_matrix)\n",
     "for row in result:\n",
     "    print(*row)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "a = [1, 2, 3]\n",
-    "a[-2] + a[-1]"
    ]
   },
   {
